Parser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 2.1.2 from Parser.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_eval -> Programa                            (0)
	Programa -> FunctionList MainBlock                 (1)
	Programa -> MainBlock                              (2)
	FunctionList -> Function FunctionList              (3)
	FunctionList -> Function                           (4)
	MainBlock -> LBRACE DeclarationList CommandList RBRACE   (5)
	MainBlock -> LBRACE CommandList RBRACE             (6)
	MainBlock -> LBRACE DeclarationList RBRACE         (7)
	Function -> Tipo Id LPAR ParameterList RPAR MainBlock   (8)
	Function -> Tipo Id LPAR RPAR MainBlock            (9)
	Tipo -> TInt                                       (10)
	Tipo -> TDouble                                    (11)
	Tipo -> TString                                    (12)
	Tipo -> TVoid                                      (13)
	ParameterList -> Parameter Comma ParameterList     (14)
	ParameterList -> Parameter                         (15)
	Parameter -> Tipo Id                               (16)
	DeclarationList -> Declaration DeclarationList     (17)
	DeclarationList -> Declaration                     (18)
	Declaration -> Tipo IdList EndCommand              (19)
	IdList -> Id Comma IdList                          (20)
	IdList -> Id                                       (21)
	Block -> LBRACE CommandList RBRACE                 (22)
	CommandList -> Command CommandList                 (23)
	CommandList -> Command                             (24)
	Command -> IfCommand                               (25)
	Command -> WhileCommand                            (26)
	Command -> AssignCommand EndCommand                (27)
	Command -> PrintCommand EndCommand                 (28)
	Command -> ReadCommand EndCommand                  (29)
	Command -> FunctionCallCommand EndCommand          (30)
	Command -> ReturnCommand EndCommand                (31)
	IfCommand -> If LPAR BooleanExpr RPAR Block        (32)
	IfCommand -> If LPAR BooleanExpr RPAR Block Else Block   (33)
	WhileCommand -> While BooleanExpr Block            (34)
	AssignCommand -> Id Assign ArithmeticExpr          (35)
	AssignCommand -> Id Assign CString                 (36)
	PrintCommand -> Print LPAR ArithmeticExpr RPAR     (37)
	ReadCommand -> Read LPAR Id RPAR                   (38)
	FunctionCallCommand -> Id LPAR FunctionCallParameterList RPAR   (39)
	FunctionCallCommand -> Id LPAR RPAR                (40)
	FunctionCallParameterList -> ArithmeticExpr Comma FunctionCallParameterList   (41)
	FunctionCallParameterList -> CString Comma FunctionCallParameterList   (42)
	FunctionCallParameterList -> ArithmeticExpr        (43)
	FunctionCallParameterList -> CString               (44)
	ReturnCommand -> Return ArithmeticExpr             (45)
	ReturnCommand -> Return CString                    (46)
	ReturnCommand -> Return                            (47)
	BooleanExpr -> BooleanExpr And BooleanTerm         (48)
	BooleanExpr -> BooleanExpr Or BooleanTerm          (49)
	BooleanExpr -> Not BooleanTerm                     (50)
	BooleanExpr -> BooleanTerm                         (51)
	BooleanTerm -> ArithmeticExpr Gt ArithmeticExpr    (52)
	BooleanTerm -> ArithmeticExpr Le ArithmeticExpr    (53)
	BooleanTerm -> ArithmeticExpr Ge ArithmeticExpr    (54)
	BooleanTerm -> ArithmeticExpr Lt ArithmeticExpr    (55)
	BooleanTerm -> ArithmeticExpr Diff ArithmeticExpr   (56)
	BooleanTerm -> ArithmeticExpr Eq ArithmeticExpr    (57)
	BooleanTerm -> LPAR BooleanExpr RPAR               (58)
	ArithmeticExpr -> ArithmeticExpr Add Term          (59)
	ArithmeticExpr -> ArithmeticExpr Sub Term          (60)
	ArithmeticExpr -> Term                             (61)
	Term -> Term Mul Factor                            (62)
	Term -> Term Div Factor                            (63)
	Term -> Factor                                     (64)
	Factor -> CDouble                                  (65)
	Factor -> CInt                                     (66)
	Factor -> Id                                       (67)
	Factor -> LPAR ArithmeticExpr RPAR                 (68)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	TInt           { TInt }
	TDouble        { TDouble }
	TString        { TString }
	TVoid          { TVoid }
	Add            { Add }
	Sub            { Sub }
	Mul            { Mul }
	Div            { Div }
	LPAR           { LPAR }
	RPAR           { RPAR }
	LBRACE         { LBRACE }
	RBRACE         { RBRACE }
	Comma          { Comma }
	EndCommand     { EndCommand }
	And            { And }
	Or             { Or }
	Gt             { Gt }
	Ge             { Ge }
	Le             { Le }
	Lt             { Lt }
	Not            { Not }
	Eq             { Eq }
	Diff           { Diff }
	Assign         { Assign }
	Id             { Id $$ }
	If             { If }
	Else           { Else }
	While          { While }
	Read           { Read }
	Print          { Print }
	Return         { Return }
	CInt           { CInt $$ }
	CDouble        { CDouble $$ }
	CString        { CString $$ }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_eval     rule  0
	Programa        rules 1, 2
	FunctionList    rules 3, 4
	MainBlock       rules 5, 6, 7
	Function        rules 8, 9
	Tipo            rules 10, 11, 12, 13
	ParameterList   rules 14, 15
	Parameter       rule  16
	DeclarationList rules 17, 18
	Declaration     rule  19
	IdList          rules 20, 21
	Block           rule  22
	CommandList     rules 23, 24
	Command         rules 25, 26, 27, 28, 29, 30, 31
	IfCommand       rules 32, 33
	WhileCommand    rule  34
	AssignCommand   rules 35, 36
	PrintCommand    rule  37
	ReadCommand     rule  38
	FunctionCallCommand rules 39, 40
	FunctionCallParameterList rules 41, 42, 43, 44
	ReturnCommand   rules 45, 46, 47
	BooleanExpr     rules 48, 49, 50, 51
	BooleanTerm     rules 52, 53, 54, 55, 56, 57, 58
	ArithmeticExpr  rules 59, 60, 61
	Term            rules 62, 63, 64
	Factor          rules 65, 66, 67, 68

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_eval -> . Programa                           (rule 0)

	TInt           shift, and enter state 5
	TDouble        shift, and enter state 6
	TString        shift, and enter state 7
	TVoid          shift, and enter state 8
	LBRACE         shift, and enter state 11

	Programa       goto state 9
	FunctionList   goto state 2
	MainBlock      goto state 10
	Function       goto state 3
	Tipo           goto state 4

State 1

	Programa -> . FunctionList MainBlock                (rule 1)

	TInt           shift, and enter state 5
	TDouble        shift, and enter state 6
	TString        shift, and enter state 7
	TVoid          shift, and enter state 8

	FunctionList   goto state 2
	Function       goto state 3
	Tipo           goto state 4

State 2

	Programa -> FunctionList . MainBlock                (rule 1)

	LBRACE         shift, and enter state 11

	MainBlock      goto state 32

State 3

	FunctionList -> Function . FunctionList             (rule 3)
	FunctionList -> Function .                          (rule 4)

	TInt           shift, and enter state 5
	TDouble        shift, and enter state 6
	TString        shift, and enter state 7
	TVoid          shift, and enter state 8
	LBRACE         reduce using rule 4

	FunctionList   goto state 31
	Function       goto state 3
	Tipo           goto state 4

State 4

	Function -> Tipo . Id LPAR ParameterList RPAR MainBlock    (rule 8)
	Function -> Tipo . Id LPAR RPAR MainBlock           (rule 9)

	Id             shift, and enter state 30


State 5

	Tipo -> TInt .                                      (rule 10)

	Id             reduce using rule 10


State 6

	Tipo -> TDouble .                                   (rule 11)

	Id             reduce using rule 11


State 7

	Tipo -> TString .                                   (rule 12)

	Id             reduce using rule 12


State 8

	Tipo -> TVoid .                                     (rule 13)

	Id             reduce using rule 13


State 9

	%start_eval -> Programa .                           (rule 0)

	%eof           accept


State 10

	Programa -> MainBlock .                             (rule 2)

	%eof           reduce using rule 2


State 11

	MainBlock -> LBRACE . DeclarationList CommandList RBRACE    (rule 5)
	MainBlock -> LBRACE . CommandList RBRACE            (rule 6)
	MainBlock -> LBRACE . DeclarationList RBRACE        (rule 7)

	TInt           shift, and enter state 5
	TDouble        shift, and enter state 6
	TString        shift, and enter state 7
	TVoid          shift, and enter state 8
	Id             shift, and enter state 24
	If             shift, and enter state 25
	While          shift, and enter state 26
	Read           shift, and enter state 27
	Print          shift, and enter state 28
	Return         shift, and enter state 29

	Tipo           goto state 12
	DeclarationListgoto state 13
	Declaration    goto state 14
	CommandList    goto state 15
	Command        goto state 16
	IfCommand      goto state 17
	WhileCommand   goto state 18
	AssignCommand  goto state 19
	PrintCommand   goto state 20
	ReadCommand    goto state 21
	FunctionCallCommandgoto state 22
	ReturnCommand  goto state 23

State 12

	Declaration -> Tipo . IdList EndCommand             (rule 19)

	Id             shift, and enter state 63

	IdList         goto state 62

State 13

	MainBlock -> LBRACE DeclarationList . CommandList RBRACE    (rule 5)
	MainBlock -> LBRACE DeclarationList . RBRACE        (rule 7)

	RBRACE         shift, and enter state 61
	Id             shift, and enter state 24
	If             shift, and enter state 25
	While          shift, and enter state 26
	Read           shift, and enter state 27
	Print          shift, and enter state 28
	Return         shift, and enter state 29

	CommandList    goto state 60
	Command        goto state 16
	IfCommand      goto state 17
	WhileCommand   goto state 18
	AssignCommand  goto state 19
	PrintCommand   goto state 20
	ReadCommand    goto state 21
	FunctionCallCommandgoto state 22
	ReturnCommand  goto state 23

State 14

	DeclarationList -> Declaration . DeclarationList    (rule 17)
	DeclarationList -> Declaration .                    (rule 18)

	TInt           shift, and enter state 5
	TDouble        shift, and enter state 6
	TString        shift, and enter state 7
	TVoid          shift, and enter state 8
	RBRACE         reduce using rule 18
	Id             reduce using rule 18
	If             reduce using rule 18
	While          reduce using rule 18
	Read           reduce using rule 18
	Print          reduce using rule 18
	Return         reduce using rule 18

	Tipo           goto state 12
	DeclarationListgoto state 59
	Declaration    goto state 14

State 15

	MainBlock -> LBRACE CommandList . RBRACE            (rule 6)

	RBRACE         shift, and enter state 58


State 16

	CommandList -> Command . CommandList                (rule 23)
	CommandList -> Command .                            (rule 24)

	RBRACE         reduce using rule 24
	Id             shift, and enter state 24
	If             shift, and enter state 25
	While          shift, and enter state 26
	Read           shift, and enter state 27
	Print          shift, and enter state 28
	Return         shift, and enter state 29

	CommandList    goto state 57
	Command        goto state 16
	IfCommand      goto state 17
	WhileCommand   goto state 18
	AssignCommand  goto state 19
	PrintCommand   goto state 20
	ReadCommand    goto state 21
	FunctionCallCommandgoto state 22
	ReturnCommand  goto state 23

State 17

	Command -> IfCommand .                              (rule 25)

	RBRACE         reduce using rule 25
	Id             reduce using rule 25
	If             reduce using rule 25
	While          reduce using rule 25
	Read           reduce using rule 25
	Print          reduce using rule 25
	Return         reduce using rule 25


State 18

	Command -> WhileCommand .                           (rule 26)

	RBRACE         reduce using rule 26
	Id             reduce using rule 26
	If             reduce using rule 26
	While          reduce using rule 26
	Read           reduce using rule 26
	Print          reduce using rule 26
	Return         reduce using rule 26


State 19

	Command -> AssignCommand . EndCommand               (rule 27)

	EndCommand     shift, and enter state 56


State 20

	Command -> PrintCommand . EndCommand                (rule 28)

	EndCommand     shift, and enter state 55


State 21

	Command -> ReadCommand . EndCommand                 (rule 29)

	EndCommand     shift, and enter state 54


State 22

	Command -> FunctionCallCommand . EndCommand         (rule 30)

	EndCommand     shift, and enter state 53


State 23

	Command -> ReturnCommand . EndCommand               (rule 31)

	EndCommand     shift, and enter state 52


State 24

	AssignCommand -> Id . Assign ArithmeticExpr         (rule 35)
	AssignCommand -> Id . Assign CString                (rule 36)
	FunctionCallCommand -> Id . LPAR FunctionCallParameterList RPAR    (rule 39)
	FunctionCallCommand -> Id . LPAR RPAR               (rule 40)

	LPAR           shift, and enter state 50
	Assign         shift, and enter state 51


State 25

	IfCommand -> If . LPAR BooleanExpr RPAR Block       (rule 32)
	IfCommand -> If . LPAR BooleanExpr RPAR Block Else Block    (rule 33)

	LPAR           shift, and enter state 49


State 26

	WhileCommand -> While . BooleanExpr Block           (rule 34)

	LPAR           shift, and enter state 47
	Not            shift, and enter state 48
	Id             shift, and enter state 38
	CInt           shift, and enter state 39
	CDouble        shift, and enter state 40

	BooleanExpr    goto state 44
	BooleanTerm    goto state 45
	ArithmeticExpr goto state 46
	Term           goto state 35
	Factor         goto state 36

State 27

	ReadCommand -> Read . LPAR Id RPAR                  (rule 38)

	LPAR           shift, and enter state 43


State 28

	PrintCommand -> Print . LPAR ArithmeticExpr RPAR    (rule 37)

	LPAR           shift, and enter state 42


State 29

	ReturnCommand -> Return . ArithmeticExpr            (rule 45)
	ReturnCommand -> Return . CString                   (rule 46)
	ReturnCommand -> Return .                           (rule 47)

	LPAR           shift, and enter state 37
	EndCommand     reduce using rule 47
	Id             shift, and enter state 38
	CInt           shift, and enter state 39
	CDouble        shift, and enter state 40
	CString        shift, and enter state 41

	ArithmeticExpr goto state 34
	Term           goto state 35
	Factor         goto state 36

State 30

	Function -> Tipo Id . LPAR ParameterList RPAR MainBlock    (rule 8)
	Function -> Tipo Id . LPAR RPAR MainBlock           (rule 9)

	LPAR           shift, and enter state 33


State 31

	FunctionList -> Function FunctionList .             (rule 3)

	LBRACE         reduce using rule 3


State 32

	Programa -> FunctionList MainBlock .                (rule 1)

	%eof           reduce using rule 1


State 33

	Function -> Tipo Id LPAR . ParameterList RPAR MainBlock    (rule 8)
	Function -> Tipo Id LPAR . RPAR MainBlock           (rule 9)

	TInt           shift, and enter state 5
	TDouble        shift, and enter state 6
	TString        shift, and enter state 7
	TVoid          shift, and enter state 8
	RPAR           shift, and enter state 97

	Tipo           goto state 94
	ParameterList  goto state 95
	Parameter      goto state 96

State 34

	ReturnCommand -> Return ArithmeticExpr .            (rule 45)
	ArithmeticExpr -> ArithmeticExpr . Add Term         (rule 59)
	ArithmeticExpr -> ArithmeticExpr . Sub Term         (rule 60)

	Add            shift, and enter state 77
	Sub            shift, and enter state 78
	EndCommand     reduce using rule 45


State 35

	ArithmeticExpr -> Term .                            (rule 61)
	Term -> Term . Mul Factor                           (rule 62)
	Term -> Term . Div Factor                           (rule 63)

	Add            reduce using rule 61
	Sub            reduce using rule 61
	Mul            shift, and enter state 92
	Div            shift, and enter state 93
	RPAR           reduce using rule 61
	LBRACE         reduce using rule 61
	Comma          reduce using rule 61
	EndCommand     reduce using rule 61
	And            reduce using rule 61
	Or             reduce using rule 61
	Gt             reduce using rule 61
	Ge             reduce using rule 61
	Le             reduce using rule 61
	Lt             reduce using rule 61
	Eq             reduce using rule 61
	Diff           reduce using rule 61


State 36

	Term -> Factor .                                    (rule 64)

	Add            reduce using rule 64
	Sub            reduce using rule 64
	Mul            reduce using rule 64
	Div            reduce using rule 64
	RPAR           reduce using rule 64
	LBRACE         reduce using rule 64
	Comma          reduce using rule 64
	EndCommand     reduce using rule 64
	And            reduce using rule 64
	Or             reduce using rule 64
	Gt             reduce using rule 64
	Ge             reduce using rule 64
	Le             reduce using rule 64
	Lt             reduce using rule 64
	Eq             reduce using rule 64
	Diff           reduce using rule 64


State 37

	Factor -> LPAR . ArithmeticExpr RPAR                (rule 68)

	LPAR           shift, and enter state 37
	Id             shift, and enter state 38
	CInt           shift, and enter state 39
	CDouble        shift, and enter state 40

	ArithmeticExpr goto state 91
	Term           goto state 35
	Factor         goto state 36

State 38

	Factor -> Id .                                      (rule 67)

	Add            reduce using rule 67
	Sub            reduce using rule 67
	Mul            reduce using rule 67
	Div            reduce using rule 67
	RPAR           reduce using rule 67
	LBRACE         reduce using rule 67
	Comma          reduce using rule 67
	EndCommand     reduce using rule 67
	And            reduce using rule 67
	Or             reduce using rule 67
	Gt             reduce using rule 67
	Ge             reduce using rule 67
	Le             reduce using rule 67
	Lt             reduce using rule 67
	Eq             reduce using rule 67
	Diff           reduce using rule 67


State 39

	Factor -> CInt .                                    (rule 66)

	Add            reduce using rule 66
	Sub            reduce using rule 66
	Mul            reduce using rule 66
	Div            reduce using rule 66
	RPAR           reduce using rule 66
	LBRACE         reduce using rule 66
	Comma          reduce using rule 66
	EndCommand     reduce using rule 66
	And            reduce using rule 66
	Or             reduce using rule 66
	Gt             reduce using rule 66
	Ge             reduce using rule 66
	Le             reduce using rule 66
	Lt             reduce using rule 66
	Eq             reduce using rule 66
	Diff           reduce using rule 66


State 40

	Factor -> CDouble .                                 (rule 65)

	Add            reduce using rule 65
	Sub            reduce using rule 65
	Mul            reduce using rule 65
	Div            reduce using rule 65
	RPAR           reduce using rule 65
	LBRACE         reduce using rule 65
	Comma          reduce using rule 65
	EndCommand     reduce using rule 65
	And            reduce using rule 65
	Or             reduce using rule 65
	Gt             reduce using rule 65
	Ge             reduce using rule 65
	Le             reduce using rule 65
	Lt             reduce using rule 65
	Eq             reduce using rule 65
	Diff           reduce using rule 65


State 41

	ReturnCommand -> Return CString .                   (rule 46)

	EndCommand     reduce using rule 46


State 42

	PrintCommand -> Print LPAR . ArithmeticExpr RPAR    (rule 37)

	LPAR           shift, and enter state 37
	Id             shift, and enter state 38
	CInt           shift, and enter state 39
	CDouble        shift, and enter state 40

	ArithmeticExpr goto state 90
	Term           goto state 35
	Factor         goto state 36

State 43

	ReadCommand -> Read LPAR . Id RPAR                  (rule 38)

	Id             shift, and enter state 89


State 44

	WhileCommand -> While BooleanExpr . Block           (rule 34)
	BooleanExpr -> BooleanExpr . And BooleanTerm        (rule 48)
	BooleanExpr -> BooleanExpr . Or BooleanTerm         (rule 49)

	LBRACE         shift, and enter state 86
	And            shift, and enter state 87
	Or             shift, and enter state 88

	Block          goto state 85

State 45

	BooleanExpr -> BooleanTerm .                        (rule 51)

	RPAR           reduce using rule 51
	LBRACE         reduce using rule 51
	And            reduce using rule 51
	Or             reduce using rule 51


State 46

	BooleanTerm -> ArithmeticExpr . Gt ArithmeticExpr    (rule 52)
	BooleanTerm -> ArithmeticExpr . Le ArithmeticExpr    (rule 53)
	BooleanTerm -> ArithmeticExpr . Ge ArithmeticExpr    (rule 54)
	BooleanTerm -> ArithmeticExpr . Lt ArithmeticExpr    (rule 55)
	BooleanTerm -> ArithmeticExpr . Diff ArithmeticExpr    (rule 56)
	BooleanTerm -> ArithmeticExpr . Eq ArithmeticExpr    (rule 57)
	ArithmeticExpr -> ArithmeticExpr . Add Term         (rule 59)
	ArithmeticExpr -> ArithmeticExpr . Sub Term         (rule 60)

	Add            shift, and enter state 77
	Sub            shift, and enter state 78
	Gt             shift, and enter state 79
	Ge             shift, and enter state 80
	Le             shift, and enter state 81
	Lt             shift, and enter state 82
	Eq             shift, and enter state 83
	Diff           shift, and enter state 84


State 47

	BooleanTerm -> LPAR . BooleanExpr RPAR              (rule 58)
	Factor -> LPAR . ArithmeticExpr RPAR                (rule 68)

	LPAR           shift, and enter state 47
	Not            shift, and enter state 48
	Id             shift, and enter state 38
	CInt           shift, and enter state 39
	CDouble        shift, and enter state 40

	BooleanExpr    goto state 75
	BooleanTerm    goto state 45
	ArithmeticExpr goto state 76
	Term           goto state 35
	Factor         goto state 36

State 48

	BooleanExpr -> Not . BooleanTerm                    (rule 50)

	LPAR           shift, and enter state 47
	Id             shift, and enter state 38
	CInt           shift, and enter state 39
	CDouble        shift, and enter state 40

	BooleanTerm    goto state 74
	ArithmeticExpr goto state 46
	Term           goto state 35
	Factor         goto state 36

State 49

	IfCommand -> If LPAR . BooleanExpr RPAR Block       (rule 32)
	IfCommand -> If LPAR . BooleanExpr RPAR Block Else Block    (rule 33)

	LPAR           shift, and enter state 47
	Not            shift, and enter state 48
	Id             shift, and enter state 38
	CInt           shift, and enter state 39
	CDouble        shift, and enter state 40

	BooleanExpr    goto state 73
	BooleanTerm    goto state 45
	ArithmeticExpr goto state 46
	Term           goto state 35
	Factor         goto state 36

State 50

	FunctionCallCommand -> Id LPAR . FunctionCallParameterList RPAR    (rule 39)
	FunctionCallCommand -> Id LPAR . RPAR               (rule 40)

	LPAR           shift, and enter state 37
	RPAR           shift, and enter state 71
	Id             shift, and enter state 38
	CInt           shift, and enter state 39
	CDouble        shift, and enter state 40
	CString        shift, and enter state 72

	FunctionCallParameterListgoto state 69
	ArithmeticExpr goto state 70
	Term           goto state 35
	Factor         goto state 36

State 51

	AssignCommand -> Id Assign . ArithmeticExpr         (rule 35)
	AssignCommand -> Id Assign . CString                (rule 36)

	LPAR           shift, and enter state 37
	Id             shift, and enter state 38
	CInt           shift, and enter state 39
	CDouble        shift, and enter state 40
	CString        shift, and enter state 68

	ArithmeticExpr goto state 67
	Term           goto state 35
	Factor         goto state 36

State 52

	Command -> ReturnCommand EndCommand .               (rule 31)

	RBRACE         reduce using rule 31
	Id             reduce using rule 31
	If             reduce using rule 31
	While          reduce using rule 31
	Read           reduce using rule 31
	Print          reduce using rule 31
	Return         reduce using rule 31


State 53

	Command -> FunctionCallCommand EndCommand .         (rule 30)

	RBRACE         reduce using rule 30
	Id             reduce using rule 30
	If             reduce using rule 30
	While          reduce using rule 30
	Read           reduce using rule 30
	Print          reduce using rule 30
	Return         reduce using rule 30


State 54

	Command -> ReadCommand EndCommand .                 (rule 29)

	RBRACE         reduce using rule 29
	Id             reduce using rule 29
	If             reduce using rule 29
	While          reduce using rule 29
	Read           reduce using rule 29
	Print          reduce using rule 29
	Return         reduce using rule 29


State 55

	Command -> PrintCommand EndCommand .                (rule 28)

	RBRACE         reduce using rule 28
	Id             reduce using rule 28
	If             reduce using rule 28
	While          reduce using rule 28
	Read           reduce using rule 28
	Print          reduce using rule 28
	Return         reduce using rule 28


State 56

	Command -> AssignCommand EndCommand .               (rule 27)

	RBRACE         reduce using rule 27
	Id             reduce using rule 27
	If             reduce using rule 27
	While          reduce using rule 27
	Read           reduce using rule 27
	Print          reduce using rule 27
	Return         reduce using rule 27


State 57

	CommandList -> Command CommandList .                (rule 23)

	RBRACE         reduce using rule 23


State 58

	MainBlock -> LBRACE CommandList RBRACE .            (rule 6)

	TInt           reduce using rule 6
	TDouble        reduce using rule 6
	TString        reduce using rule 6
	TVoid          reduce using rule 6
	LBRACE         reduce using rule 6
	%eof           reduce using rule 6


State 59

	DeclarationList -> Declaration DeclarationList .    (rule 17)

	RBRACE         reduce using rule 17
	Id             reduce using rule 17
	If             reduce using rule 17
	While          reduce using rule 17
	Read           reduce using rule 17
	Print          reduce using rule 17
	Return         reduce using rule 17


State 60

	MainBlock -> LBRACE DeclarationList CommandList . RBRACE    (rule 5)

	RBRACE         shift, and enter state 66


State 61

	MainBlock -> LBRACE DeclarationList RBRACE .        (rule 7)

	TInt           reduce using rule 7
	TDouble        reduce using rule 7
	TString        reduce using rule 7
	TVoid          reduce using rule 7
	LBRACE         reduce using rule 7
	%eof           reduce using rule 7


State 62

	Declaration -> Tipo IdList . EndCommand             (rule 19)

	EndCommand     shift, and enter state 65


State 63

	IdList -> Id . Comma IdList                         (rule 20)
	IdList -> Id .                                      (rule 21)

	Comma          shift, and enter state 64
	EndCommand     reduce using rule 21


State 64

	IdList -> Id Comma . IdList                         (rule 20)

	Id             shift, and enter state 63

	IdList         goto state 123

State 65

	Declaration -> Tipo IdList EndCommand .             (rule 19)

	TInt           reduce using rule 19
	TDouble        reduce using rule 19
	TString        reduce using rule 19
	TVoid          reduce using rule 19
	RBRACE         reduce using rule 19
	Id             reduce using rule 19
	If             reduce using rule 19
	While          reduce using rule 19
	Read           reduce using rule 19
	Print          reduce using rule 19
	Return         reduce using rule 19


State 66

	MainBlock -> LBRACE DeclarationList CommandList RBRACE .    (rule 5)

	TInt           reduce using rule 5
	TDouble        reduce using rule 5
	TString        reduce using rule 5
	TVoid          reduce using rule 5
	LBRACE         reduce using rule 5
	%eof           reduce using rule 5


State 67

	AssignCommand -> Id Assign ArithmeticExpr .         (rule 35)
	ArithmeticExpr -> ArithmeticExpr . Add Term         (rule 59)
	ArithmeticExpr -> ArithmeticExpr . Sub Term         (rule 60)

	Add            shift, and enter state 77
	Sub            shift, and enter state 78
	EndCommand     reduce using rule 35


State 68

	AssignCommand -> Id Assign CString .                (rule 36)

	EndCommand     reduce using rule 36


State 69

	FunctionCallCommand -> Id LPAR FunctionCallParameterList . RPAR    (rule 39)

	RPAR           shift, and enter state 122


State 70

	FunctionCallParameterList -> ArithmeticExpr . Comma FunctionCallParameterList    (rule 41)
	FunctionCallParameterList -> ArithmeticExpr .       (rule 43)
	ArithmeticExpr -> ArithmeticExpr . Add Term         (rule 59)
	ArithmeticExpr -> ArithmeticExpr . Sub Term         (rule 60)

	Add            shift, and enter state 77
	Sub            shift, and enter state 78
	RPAR           reduce using rule 43
	Comma          shift, and enter state 121


State 71

	FunctionCallCommand -> Id LPAR RPAR .               (rule 40)

	EndCommand     reduce using rule 40


State 72

	FunctionCallParameterList -> CString . Comma FunctionCallParameterList    (rule 42)
	FunctionCallParameterList -> CString .              (rule 44)

	RPAR           reduce using rule 44
	Comma          shift, and enter state 120


State 73
